# AgentGeyser

./: .ampignore  .gitignore  AGENT.md  CHANGELOG.md
.github/workflows/: ci.yml  publish-dry-run.yml  release.yml
docs/design/: 01-vision.md  02-competitive-landscape.md  03-architecture.md  04-modules.md  05-idl-registry.md  06-skill-synthesizer.md  07-nl-planner.md  08-sdk.md  09-mcp-server.md  10-api.md  11-data-model.md  12-performance-cost.md  13-security.md  14-deployment-observability.md  15-skeleton.md  16-roadmap.md  README.md  VALIDATION-REPORT.md
docs/roadmap/: AETHERNODE-VISION.md
skeleton/: AGENT.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
skeleton/.github/workflows/: ci.yml
skeleton/crates/idl-registry/: Cargo.toml
skeleton/crates/idl-registry/src/: anchor_idl.rs  lib.rs  native_skills.rs  yellowstone.rs
skeleton/crates/idl-registry/tests/: live_triton.rs  yellowstone_mock.rs
skeleton/crates/mcp-server/: Cargo.toml
skeleton/crates/mcp-server/src/: lib.rs  main.rs  proxy_client.rs  transport.rs
skeleton/crates/mcp-server/tests/: http_transport.rs
skeleton/crates/nl-planner/: Cargo.toml
skeleton/crates/nl-planner/src/: anthropic.rs  lib.rs  mock.rs  openai.rs
skeleton/crates/nl-planner/tests/: anthropic_unit.rs  live.rs  skeleton_contract.rs
skeleton/crates/proxy/: Cargo.toml
skeleton/crates/proxy/src/: lib.rs  main.rs
skeleton/crates/proxy/src/rpc/: invoke_skill.rs  mod.rs  plan_action.rs
skeleton/crates/proxy/tests/: spike_e2e.rs
skeleton/crates/skill-synth/: Cargo.toml
skeleton/crates/skill-synth/src/: lib.rs
skeleton/crates/tx-builder/: Cargo.toml
skeleton/crates/tx-builder/src/: devnet_gate.rs  lib.rs  spl_token.rs
skeleton/examples/: LIVE.md  MVP-M1-REPORT.md  MVP-M2-REPORT.md  MVP-M3-REPORT.md  MVP-M4-REPORT.md  MVP-M5A-REPORT.md  MVP-M5B-REPORT.md  MVP-M5C-REPORT.md  MVP-M6-REPORT.md  README.md  SPIKE-REPORT.md  live-smoke.ts  package.json  pnpm-lock.yaml  recording.txt  run-track-b.sh  setup-surfpool.sh  sign-and-send.ts  spike-demo.ts  tsconfig.json
skeleton/examples/anchor-hello-world/: .gitignore  Anchor.toml  PROGRAM_ID.txt  README.md  deploy.sh
skeleton/examples/anchor-hello-world/programs/hello_world/: Cargo.toml
skeleton/examples/anchor-hello-world/programs/hello_world/src/: lib.rs
skeleton/examples/fixtures/: hello_world.idl.json
skeleton/examples/mcp/: README.md  claude_desktop_config.snippet.json  smoke-inspector.sh
skeleton/sdk/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
skeleton/sdk/apps/docs/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.typedoc.json  typedoc.json
skeleton/sdk/apps/docs/docs/: architecture.md  installation.md  nl-planner.md  non-custodial.md  quickstart.md
skeleton/sdk/apps/docs/src/css/: custom.css
skeleton/sdk/apps/docs/src/pages/: index.md
skeleton/sdk/examples/: live-smoke.mjs
