[workspace]
members = [
  "crates/nl-planner",
  "crates/proxy",
  "crates/idl-registry",
  "crates/skill-synth",
  "crates/tx-builder",
  "crates/mcp-server",
]
exclude = ["examples/anchor-hello-world/programs/hello_world"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
futures = "0.3"
async-trait = "0.1"
jsonschema = { version = "0.18", default-features = false }
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
solana-sdk = "2"
borsh = "1"
