[package]
name = "idl-registry"
version = "0.0.0"
edition = "2021"

[features]
default = []
live-yellowstone = ["dep:yellowstone-grpc-client", "dep:yellowstone-grpc-proto"]

[dependencies]
skill-synth = { path = "../skill-synth" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
solana-sdk = { workspace = true }
base64 = { workspace = true }
flate2 = "1"
bs58 = "0.5"
yellowstone-grpc-client = { version = "5", optional = true }
yellowstone-grpc-proto = { version = "5", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
time = { version = "0.3", features = ["formatting"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
