[package]
name = "nl-planner"
version = "0.0.0"
edition = "2021"

[lib]
name = "nl_planner"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true }
