[package]
name = "proxy"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "proxy"
path = "src/main.rs"

[features]
default = []
live-yellowstone = ["idl-registry/live-yellowstone"]

[dependencies]
idl-registry = { path = "../idl-registry" }
skill-synth = { path = "../skill-synth" }
tx-builder = { path = "../tx-builder" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
solana-sdk = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
bincode = "1"
