[package]
name = "tx-builder"
version = "0.0.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
borsh = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
bincode = "1"
skill-synth = { path = "../skill-synth" }

[dev-dependencies]
sha2 = "0.10"
