[package]
name = "tx-builder"
version = "0.0.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
borsh = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
bincode = "1"
skill-synth = { path = "../skill-synth" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
sha2 = "0.10"
mockito = "1"
