[package]
name = "hello_world"
version = "0.1.0"
description = "Minimal Anchor hello_world program for AgentGeyser MVP-M2 Track A demo."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30"
